# mentor

./: .env.example  LICENSE  README.md  chat.py  image.py  pyproject.toml
.streamlit/: secrets.toml.example
mentor/: cli.py
