[tool.poetry]
name = "mentor"
version = "0.1.0"
description = "A CLI client of OpenAI API"
authors = ["TSUYUKI kohei <kotsuyuki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.4.2"
click = "^8.1.6"
openai = "^0.27.8"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mentor = "mentor.cli:main"