[tool.poetry]
name = "mentor"
version = "0.1.0"
description = "Simple ChatGPT clone build by Streamlit"
authors = ["TSUYUKI kohei <kotsuyuki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openai = "^0.27.8"
streamlit = "^1.26.0"
langchain = "^0.0.275"
more-itertools = "^10.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mentor = "mentor.cli:main"